--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
         <!--Let browser know website is optimized for mobile-->
         <link rel="stylesheet" href="css/main.css"/>
+        <link rel="stylesheet" href="css/Slider.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 	    <style>
 	    </style>
@@ -199,6 +200,7 @@
         </div>
         <!--Helping Us section ends here-->
         
+        <!--Services section starts-->
         <div id="services" class="container paddingBottom100">
             <div class="row">
                 <div class="col l6 m12 s12">
@@ -240,51 +242,53 @@
                 </div>
             </div>
         </div>
-        <!--Services section starts-->
         <!--Services section ends-->
 
         <!--Galery section starts here -->
-        <div style="background-color:black;">
+        <div id="galleryContainer">
+            <div class="relative" id="randomElementsHolder">
+
+            </div>
             <div class="row" style="min-height: 600px;">
-                <div class="col l3 m3 s12 hide-on-small-only" style="display: flex;justify-content: center;text-align: center;height:500px;align-items: center;flex-direction: column">
-                    <p class="font40 bold whiteText letterSpace1" id="GalleryName">Gallery</p>
-                    <a class="waves-effect waves-light btn white" style="border-radius: 20px;"><span style="color:black">More Images</span></a>
+                <div class="col l3 m3 s12 hide-on-small-only" style="display: flex;justify-content: center;text-align: center;height:800px;align-items: center;flex-direction: column">
+                    <p style="z-index: 3;" class="font40 bold whiteText letterSpace1" id="GalleryName">Gallery</p>
+                    <a style="z-index: 3;border-top-left-radius: 20px;border-bottom-right-radius: 20px;box-shadow: 3px 3px 5px 0px grey" class="waves-effect waves-light btn-large white"><span style="color:black">More Images</span></a>
                 </div>
                 <div class="col l9 m9 s12" style="margin-top:50px;">
                     <div class="row hide-on-med-and-up">
                         <div class="s12">
-                            <p class="font24 bold whiteText letterSpace1 center">Gallery</p>
+                            <p style="z-index: 3;" class="font24 bold whiteText letterSpace1 center relative">Gallery</p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col l12 s12 m12 center" style="display:flex;justify-content: center">
-                                <a class="waves-effect waves-light btn  tabby" id="allImages" style="border-top-left-radius: 25px;border-bottom-left-radius: 25px;background-color: #d6d7d6"><span style="color:black">All</span></a>
-                                <a class="waves-effect waves-light btn  tabby" id="oldImages" ><span style="color:black">Old</span></a>
-                                <a class="waves-effect waves-light btn  tabby" id="recentImages" style="border-top-right-radius: 25px;border-bottom-right-radius: 25px;"><span style="color:black">Recent</span></a>
+                            <a class="waves-effect waves-light btn-large tabby" id="allImages" style="z-index:3;border-top-left-radius: 25px;border-bottom-left-radius: 25px;background-color: #d6d7d6"><span style="color:black">All</span></a>
+                            <a class="waves-effect waves-light btn-large tabby" id="oldImages" style="z-index:3;"><span style="color:black">Old</span></a>
+                            <a class="waves-effect waves-light btn-large tabby" id="recentImages" style="z-index:3;border-top-right-radius: 25px;border-bottom-right-radius: 25px;"><span style="color:black">Recent</span></a>
                         </div>
                     </div>
                     <div class="row paddingTop50">
-                        <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center;justify-content: center"> 
-                            <a id="prevImg" class="btn-floating btn-large" style="background-color: white">
+                        <div class="col l2 m2 s2 center" style="height: 500px;display: flex;align-items: center;justify-content: center"> 
+                            <a id="prevImg" class="btn-floating btn-large" style="background-color: white;z-index: 3">
                                 <i id="missionArrow" class="large material-icons" style="color:black;">arrow_back</i>
                             </a>
                         </div>
-                        <div id="gallery" class="col l8 m8 s8 center" style="position:relative;display: flex;justify-content: center;top:70px">
-                            <div class="gallery-image red" style="position: absolute;height:300px;width: 80%;transform: rotate(0deg);z-index:10;box-shadow:0px 0px 10px 0px black;">
+                        <div id="gallery" class="col l8 m8 s8 center" style="position:relative;display: flex;justify-content: center;top:80px">
+                            <div class="gallery-image red" style="position: absolute;height:500px;width: 80%;transform: rotate(0deg);z-index:10;box-shadow:0px 0px 10px 0px black;">
                             </div>
-                            <div class="gallery-image blue" style="position: absolute;height:300px;width: 75%;transform: rotate(0deg);top:-20px;z-index:9;box-shadow:0px 0px 10px 1px black;">
+                            <div class="gallery-image blue" style="position: absolute;height:500px;width: 75%;transform: rotate(0deg);top:-20px;z-index:9;box-shadow:0px 0px 10px 1px black;">
                             </div>
-                            <div class="gallery-image green" style="position: absolute;height:300px;width: 70%;transform: rotate(0deg);top:-40px;z-index:8;box-shadow:0px 0px 10px 1px black;">
+                            <div class="gallery-image green" style="position: absolute;height:500px;width: 70%;transform: rotate(0deg);top:-40px;z-index:8;box-shadow:0px 0px 10px 1px black;">
                             </div>
-                            <div class="gallery-image yellow" style="position: absolute;height:300px;width: 65%;transform: rotate(0deg);top:-60px;z-index:7;box-shadow:0px 0px 10px 1px black;">
+                            <div class="gallery-image yellow" style="position: absolute;height:500px;width: 65%;transform: rotate(0deg);top:-60px;z-index:7;box-shadow:0px 0px 10px 1px black;">
                             </div>
-                            <div class="gallery-image orange" style="position: absolute;height:300px;width: 60%;transform: rotate(0deg);top:-80px;z-index:6;box-shadow:0px 0px 10px 1px black;">
+                            <div class="gallery-image orange" style="position: absolute;height:500px;width: 60%;transform: rotate(0deg);top:-80px;z-index:6;box-shadow:0px 0px 10px 1px black;">
                             </div>
-                            <div class="gallery-image grey" style="position: absolute;height:300px;width: 55%;transform: rotate(0deg);top:-100px;z-index:5;box-shadow:0px 0px 10px 1px black;">
+                            <div class="gallery-image grey" style="position: absolute;height:500px;width: 55%;transform: rotate(0deg);top:-100px;z-index:5;box-shadow:0px 0px 10px 1px black;">
                             </div>
                         </div>
-                        <div class="col l2 m2 s2 center" style="height: 300px;display: flex;align-items: center"> 
-                            <a id="nextImg" class="btn-floating btn-large" style="background-color: white" >
+                        <div class="col l2 m2 s2 center" style="height: 500px;display: flex;align-items: center"> 
+                            <a id="nextImg" class="btn-floating btn-large" style="background-color: white;z-index: 3" >
                                 <i id="missionArrow" class="large material-icons" style="color:black;" >arrow_forward</i>
                             </a>
                         </div>
@@ -294,50 +298,26 @@
         </div>
         <!--Galery section ends here -->
         
+        <!--Events section starts here-->
         <div class="container">
             <div class="row marginBotton50 margintop40">
-                <div class="col m12 s12 hide-on-large-only">
+                <div class="col m12 s12 l12">
                     <div style="display: flex;justify-content: center">
-                        <a class="waves-effect waves-light btn  tabby" id="allImages" style="border-top-left-radius: 25px;border-bottom-left-radius: 25px;background-color: #d6d7d6"><span style="color:black">All</span></a>
-                        <a class="waves-effect waves-light btn  tabby" id="oldImages" ><span style="color:black">Old</span></a>
-                        <a class="waves-effect waves-light btn  tabby" id="recentImages" style="border-top-right-radius: 25px;border-bottom-right-radius: 25px;"><span style="color:black">Recent</span></a>
+                        <a class="waves-effect waves-light btn-large eventsBtn" id="upcomingEvents" style="border-top-left-radius: 25px;border-bottom-left-radius: 25px;background-color: #004d40;color:white"><span>Upcoming Events</span></a>
+                        <a class="waves-effect waves-light btn-large eventsBtn" id="pastEvents" style="color:black;background-color:white"><span>Past Events</span></a>
+                        <a class="waves-effect waves-light btn-large eventsBtn" id="allEvents" style="border-top-right-radius: 25px;border-bottom-right-radius: 25px;color:black;background-color:white"><span>All Events</span></a>
                     </div>
                 </div>
-                <div class="col l3 hide-on-med-and-down" id="eventTabs" style="display: flex;flex-direction: column;align-items: center;padding-top:20px">
-                    <a class="waves-effect waves-light btn-large bold eventsBtn" id="allEvents">All Events</a>
-                    <div style="text-align:center;width:10px;height:50px;background-color: chocolate">
-                    </div>
-                    <a class="waves-effect waves-light btn-large bold eventsBtn" id="upcomingEvents">Upcoming Events</a>
-                    <div style="text-align:center;width:10px;height:50px;background-color: chocolate">
-                    </div>
-                    <a class="waves-effect waves-light btn-large bold eventsBtn" id="pastEvents">Past Events</a>
-                </div>
-                <div class="col l9 m10 s10">
+                <div class="col l12 m12 s12 margintop70">
                     <div class="row">
-                        <div id="eventsHolders" style="min-height: 320px;">
+                        <div id="eventsContainer"></div>
+                        <div id="eventsHolders" class="slider" style="min-height: 320px;">
                         </div>
-                    </div>
-                    <div class="row center hide-on-med-and-down">
-                        <div class="col l6 m6 right-align">
-                            <a id="prevEvent" class="waves-effect waves-light btn-large white" style="border-top-left-radius: 40px;border-bottom-left-radius: 40px;box-shadow: 0px 0px 5px 0px black;width: fit-content">
-                                <i class="large material-icons" style="color:black;" >chevron_left</i>
-                            </a>
-                        </div>
-                        <div class="col l6 m6 left-align">
-                            <a id="nextEvent" class="waves-effect waves-light btn-large white" style="border-top-right-radius: 40px;border-bottom-right-radius: 40px;box-shadow: 0px 0px 5px 0px black;width: fit-content">
-                                <i class="large material-icons" style="color:black;" >chevron_right</i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col m2 s2 hide-on-large-only">
-                    <div style="display: flex;flex-direction: column;justify-content: center;align-items: center;height:inherit;padding-left: 30px;height: 650px;">
-                        <a id="prevEvent" class="btn-floating btn-large waves-effect waves-light red" ><i class="material-icons">add</i></a>
-                        <a id="nextEvent" class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
                     </div>
                 </div>
             </div>
         </div>
+        <!--Events section ends here-->
 
         <!--Parallax stats section starts here -->
         <div id="parallaxCount" style="margin-top: -20px;">
@@ -362,30 +342,30 @@
 
         <script id="eventsLoader" type="text/x-handlebars-template">
             {{#each events}}
-                {{#ifEqual @index }}
-                    <div class="col l5 m12 s12 center eventCard" style="min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;margin-left: 30px;margin-bottom: 15px;">
-                {{else}}
-                    <div class="col l5 m12 s12 center eventCard" style="display:none;min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;margin-left: 30px">
-                {{/ifEqual}}
+                    <div class="center eventCard sliderItems" style="min-height: 320px;box-shadow:0px 0px 10px 0px black;border-radius: 20px;margin-bottom: 15px;">
                         <div class="row">
-                            <div class="col l6 m6 s12">
-                                <img class="padding15 margintop10" src="./images/events2.jpg" width="100%" height="170px">
+                            <div class="col l12 m12 s12 center margintop40">
+                                <img class="bluntBorder" src="./images/events2.jpg" width="70%" height="200px">
                             </div>
-                            <div class="col l6 m6 s12">
-                                <p class="bold font18 center">{{name}}</p>
-                                <p class="left-align center" style="max-height:110px; text-overflow:ellipsis;overflow:scroll"> {{brief}}</p>
+                            <div class="col l12 m12 s12 center">
+                                    <p class="bold font18 center">{{name}}</p>
+                                </div>
+                            <div class="col l12 m12 s12">
+                                <div class="container">
+                                    <p style="max-height:110px; text-overflow:ellipsis;overflow:scroll;padding-left:20px;padding-right:20px;text-align: justify"> {{brief}}</p>
+                                </div>
                             </div>
                         </div>
-                        <div class="" style="display: flex;margin-top:-20px;flex-direction: column;padding-left:15px;">
-                            <div style="display: flex">
+                        <div style="display: flex;margin-top:-20px;flex-direction: column;padding-left:15px;">
+                            <div style="display: flex;justify-content: center">
                                 <i class="material-icons">location_on</i>
-                                <span style="word-break: break-all;padding-left:10px;padding-top:3px;"> {{location}}</span>
+                                <span style="word-break: break-all;padding-left:10px;padding-top:3px;font-weight: bold"> {{location}}</span>
                             </div>
-                            <div style="display: flex;margin-top:5px;">
+                            <div style="display: flex;margin-top:5px;justify-content: center">
                                     <i style="padding-top:3px;" class="material-icons">access_time</i>
-                                    <span style="word-break: break-all;padding-left:10px;padding-top:3px;"> {{time}}</span>
+                                    <span style="word-break: break-all;padding-left:10px;padding-top:3px;font-weight: bold"> {{time}}</span>
                             </div>
-                            <div class="center margintop10" style="margin-bottom:15px;">
+                            <div class="center margintop40" style="margin-bottom:30px;">
                                 <a id="processBtn" class="waves-effect waves-light btn">Read More</a>
                             </div>
                         </div>
@@ -400,5 +380,6 @@
         <script type="text/javascript" src="./js/EventsData.js"></script>
         <script type="text/javascript" src="./js/pageBuilder.js"></script>
         <script type="text/javascript" src="./js/EventsBuilder.js"></script>
+        <script type="text/javascript" src="js/Slider.js"></script>
     </body>
 </html>
